if (BUILD_TESTS)
    find_package(QJson)
    if (QJSON_FOUND)
        message(STATUS "QJSON found and tests enabled, testapp will be built")
        add_subdirectory(testapp)
    else (QJSON_FOUND)
        message(STATUS "QJSON not found, testapp will not be built")
    endif (QJSON_FOUND)
else (BUILD_TESTS)
    message(STATUS "Tests disabled, testapp will not be built")
endif (BUILD_TESTS)
